--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ justify-content: space-between;
 } 
 
 .logo img { 
-max-width: 100px; 
-height: auto; 
+max-width: 800px; 
+height: 250; 
 } 
 
 .header-content { 
@@ -121,5 +121,6 @@ flex-direction: column;
 margin-bottom: 16px; 
 } 
 }
+
 
 
